#126. Fix for text overlapping.

--- a/web-app/css/cgrails/default/less/flashcards.less
+++ b/web-app/css/cgrails/default/less/flashcards.less
@@ -263,4 +263,13 @@
 			}
 		}
 	}
+	.flashcard {
+		.header	{
+		  	.span3 {
+		  		h4 {
+		  			font-size:13px;
+		  		}
+		  	}
+		}
+	}	
 }
